feat: Enable organization logo uploads during creation and update media ID to varchar type.
